[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/GameCamera.gd" type="Script" id=1]

[node name="GameCamera" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 20, 0 )

[node name="ZoomTween" type="Tween" parent="."]

[node name="ResetTween" type="Tween" parent="."]

[node name="FlipTween" type="Tween" parent="."]

